Fixed alignment of bullets in Services

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -566,6 +566,7 @@ li{
 	font-size:18px;
 	letter-spacing:0px;
 	line-height:35px;
+  margin-left: 60px;
 }
 .container{
 	max-width:1170px;
